# simple_png_to_jpeg

./: .gitignore  README.md  simple_png_to_jpeg.c  simple_png_to_jpeg.h
sample/: CMakeLists.txt  main.c
